Fixed white space on right side

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+html,body{
+    margin: 0;
+    padding: 0;
+    overflow-x:clip;
+}
+
 #mentors{
     margin-top: 50px;
     background-color: #EAF3F8;
@@ -6,6 +12,10 @@
 
 .card{
     margin-top: 70px;
+    border: none;
+    
+}
+.card-body{
     background-color: #EAF3F8;
     border: none;
 }
